<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scripturereference.MainActivity">

    <TextView
        android:text="@string/label_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvLabelMain"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/etBook"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/tvLabelMain"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etChapter"
        android:layout_below="@+id/etBook"
        android:layout_alignLeft="@+id/etBook"
        android:layout_alignStart="@+id/etBook"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etVerse"
        android:layout_below="@+id/etChapter"
        android:layout_alignLeft="@+id/etChapter"
        android:layout_alignStart="@+id/etChapter"/>

    <Button
        android:text="@string/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etVerse"
        android:layout_centerHorizontal="true"
        android:id="@+id/btShare"
        android:onClick="shareScripture"/>

    <TextView
        android:text="@string/label_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etChapter"
        android:layout_toStartOf="@+id/etBook"
        android:layout_marginBottom="11dp"
        android:id="@+id/tvBookLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Small"/>

    <TextView
        android:text="@string/label_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBookLabel"
        android:layout_toStartOf="@+id/etChapter"
        android:layout_marginTop="11dp"
        android:id="@+id/tvChapterLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Small"/>

    <TextView
        android:text="@string/label_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etChapter"
        android:layout_toStartOf="@+id/etVerse"
        android:layout_marginTop="10dp"
        android:id="@+id/tvVerseLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Small"/>

</RelativeLayout>
